# opendal

./: .gitignore  opendal.opam
bindings/ocaml/: .ocamlformat-ignore  README.md  build.rs  dune-project
bindings/ocaml/lib/: basic_blocking.mli  block_operator.ml  block_operator.mli  dune  layers.ml  opendal.ml  operator.mli  scheme.ml
bindings/ocaml/src/: dune  layers.ml  lib.rs
bindings/ocaml/src/basic_blocking/: mod.rs
bindings/ocaml/src/layers/: mod.rs
bindings/ocaml/src/operator/: mod.rs
bindings/ocaml/src/scheme/: mod.rs
bindings/ocaml/test/: test.ml
