; Licensed to the Apache Software Foundation (ASF) under one
; or more contributor license agreements.  See the NOTICE file
; distributed with this work for additional information
; regarding copyright ownership.  The ASF licenses this file
; to you under the Apache License, Version 2.0 (the
; "License"); you may not use this file except in compliance
; with the License.  You may obtain a copy of the License at
;
;   http://www.apache.org/licenses/LICENSE-2.0
;
; Unless required by applicable law or agreed to in writing,
; software distributed under the License is distributed on an
; "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
; KIND, either express or implied.  See the License for the
; specific language governing permissions and limitations
; under the License.

(rule
 (targets libinner.a dllinner.so)
 (deps
  (source_tree .))
 (action
  (progn
   (run
    sh
    -c
    "cd %{project_root} && pwd && cargo build -p opendal-ocaml --release")
   (run sh -c "cd %{project_root} && pwd ")
   (run
    sh
    -c
    "mv %{project_root}/../../target/release/libopendal_ocaml.so ./dllinner.so 2> /dev/null || mv %{project_root}/../../target/release/libopendal_ocaml.dylib ./dllinner.so")
   (run
    mv
    %{project_root}/../../target/release/libopendal_ocaml.a
    libinner.a))))

(library
 (name inner)
 (public_name opendal.inner)
 (foreign_archives inner)
 (c_library_flags
  (-lpthread -lc -lm)))
